...
                            textFieldState.setTextAndPlaceCursorAtEnd("$it")
                            onChange(it)
                        }
                    },
                    enabled = agendaDays > 0 && enabled,
                    modifier = Modifier
                        .testTag("search_filter_agenda_options_subtract_button")
                ) {
                    Icon(
                        painterIcon(Icons.SUBTRACT),
                        contentDescription = stringResource(R.string.content_description_subtract)
                    )
                }
...
                val resources = LocalResources.current
                val focusManager = LocalFocusManager.current
                OrgzlyBasicTextField(
                    textFieldState,
                    modifier = Modifier
                        .weight(1f)
                        .testTag("search_filter_agenda_days_input"),
                    keyboardOptions = KeyboardOptions(
                        keyboardType = KeyboardType.Number,
                        imeAction = ImeAction.Done
                    ),
                    onKeyboardAction = KeyboardActionHandler {
                        focusManager.clearFocus()
...
