...
    <string name="create_org_links_from_shared_links">Create org links from shared links</string>
    <string name="book_names_cannot_contain">Book names cannot contain \'../\'</string>
    <string name="is_active_label">Active</string>

    <string name="query_filter_search">Refine search</string>

    <string name="search_filter_exclude_done">Exclude done items</string>
    <string name="search_filter_show_as_agenda">Show as agenda</string>
    <string name="search_filter_default_sort_order">Default</string>
    <string name="search_filter_book_sort_order">Book</string>
    <string name="search_filter_title_sort_order">Title</string>
    <string name="search_filter_scheduled_sort_order">Scheduled date</string>
    <string name="search_filter_deadline_sort_order">Deadline date</string>
    <string name="search_filter_event_sort_order">Event date</string>
...
